# ai_database_MVP

./: Makefile  README.md  bandit-report.json  coverage.xml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
Development-Plan/: CODE_SNIPPETS_LIBRARY.md  COMPREHENSIVE_TESTING_FRAMEWORK.md  CONTEXT_FILES_GUIDE.md  Development-Plan  IMPROVED_CONTEXT_STRUCTURE_EXAMPLE.md  IMPROVED_DEVELOPMENT_SYSTEM.md  MIGRATION_PLAN_CONTEXTS.md  QUICKSTART.md
Development-Plan/contexts/: README.md  _shared_global_context.md  prompt_0_1_project_initialization_and_structure.md  prompt_0_2_development_standards_and_ci_setup.md  prompt_1_1_message_bus_and_communication_core.md  prompt_1_2_agent_orchestrator_and_lifecycle.md  prompt_1_3_base_agent_framework.md  prompt_1_4_sandbox_environment_and_safety.md  prompt_1_5_workflow_engine_and_templates.md  prompt_1_6_configuration_and_database_connectors.md  prompt_1_7_phase_1_integration_and_validation.md  prompt_2_1_advanced_clarifier_agent.md  prompt_2_1a_basic_clarifier_agent_core.md  prompt_2_1b_schema_analysis_and_intelligence.md  prompt_2_1c_question_generation_and_context_building.md  prompt_2_2_intelligent_coder_agent.md  prompt_2_2a_basic_sql_generation.md  prompt_2_2b_advanced_sql_generation_and_optimization.md  prompt_2_2c_security_and_documentation.md  prompt_2_3_comprehensive_tester_agent.md  prompt_2_3a_basic_validation_and_testing.md  prompt_2_3b_sandbox_testing_and_performance.md  prompt_2_3c_advanced_testing_and_regression.md  prompt_2_4_agent_communication_protocols.md  prompt_2_5_advanced_agent_orchestration.md  prompt_2_6_phase_2_agent_integration_and_validation.md  prompt_2_6a_agent_communication_integration.md  prompt_2_6b_performance_and_optimization.md  prompt_3_1_advanced_schema_intelligence.md  prompt_3_2_query_optimization_engine.md  prompt_3_3_data_quality_and_validation_engine.md  prompt_3_4_performance_profiling_and_monitoring.md  prompt_3_5_intelligence_api_and_metadata_store.md  prompt_3_6_phase_3_intelligence_integration_and_validation.md  prompt_4_1_production-ready_rest_api.md  prompt_4_2_task_management_and_websocket_api.md  prompt_4_3_monitoring_dashboard_and_analytics.md  prompt_4_4_python_sdk_and_documentation.md  prompt_5_1_comprehensive_security_and_performance_review.md  prompt_5_2_production_deployment_and_operations.md
Development-Plan/scripts/: break_down_prompts.py  modify_contexts.py  progress_tracker.py  recover_prompt.py  test_runner.py  validate_prompt.py
core/: __init__.py  message_bus.py  message_types.py  version.py
data/message_bus/: metrics.json
docker/: docker-compose.test.yml
docs/: CODING_STANDARDS.md  index.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_57760688d1f824db_message_bus_py.html  z_57760688d1f824db_message_types_py.html
multi_agent_database_ai_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
